--- a/index.html
+++ b/index.html
@@ -10,5 +10,10 @@
     <header>
         <h1>Hello World!</h1>
     </header>
+    <main>
+        <h2>
+            ...and universe!
+        </h2>
+    </main>
 </body>
 </html>
